tests/ui/invalid_endian_attr.stderr
error: expected `little` or `big` in #[endian(...)]
 --> tests/ui/invalid_endian_attr.rs:5:14
  |
5 |     #[endian(native)]
  |              ^^^^^^
